Agrega mejoras para creación de notas generales
